[tool.poetry]
name = "jamall"
version = "0.1.0"
description = "Converts JSON to YAML and vice versa in messages from / to LLMs"
authors = ["lumpenspace <lumpenspace@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0.1"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
